--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -9,23 +9,27 @@
 
     <TextView
         android:id="@+id/textView"
-        android:layout_width="265dp"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="284dp"
+        android:layout_width="332dp"
+        android:layout_height="69dp"
+        android:layout_marginTop="228dp"
+        android:clickable="true"
+        android:focusable="true"
         android:fontFamily="sans-serif"
         android:text="Hello World!"
         android:textAlignment="center"
         android:textColor="#03A9F4"
-        android:textSize="36sp"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
+        android:textSize="45sp"
+        app:layout_constraintBottom_toTopOf="@+id/revertButton"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
     <Button
         android:id="@+id/revertButton"
         android:layout_width="136dp"
         android:layout_height="46dp"
-        android:layout_marginBottom="232dp"
+        android:layout_marginBottom="264dp"
         android:backgroundTint="#650775"
         android:text="@string/revert_button_text"
         android:textColor="#03A9F4"
